skills cards black background, fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@ h1 {
 h3 {
   font-size: 3.7rem;
 }
+h4 {
+  font-size: 2rem;
+}
 
 /* navigation tabs */
 .navigation1 {
@@ -148,7 +151,7 @@ button {
 }
 .skills-card {
   width: 25%;
-  margin: 2%;
+  padding: 2%;
 }
 
 /* .projects-card {
@@ -171,6 +174,9 @@ button {
   color: #c2fcf7;
 
   /* background-image: linear-gradient(#85bdbf, #1dcadb); */
+}
+.card1 {
+  background-color: black;
 }
 .card2 {
   width: 30rem;
